--- a/lesson3/css/medium.css
+++ b/lesson3/css/medium.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 37.5em) {
     h1 {
         font-size: 2.5
     }
@@ -14,14 +14,20 @@
         max-width: 700px;
         margin: 0 auto 1em;
     }
-    nav ul{
-        grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
-        border-radius: 0 0 1em 1em;
+    nav{
         max-width: 700px;
         margin: 0 auto;
+        border-radius: 0 0 1em 1em;
+    }
+    nav ul{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     }
     nav a:hover { 
-        border-radius: 0 0 1em 1em;
-        background: #26547C;
+        border-radius: 1em;
+    }
+    main{
+        max-width: 700px;
+        margin: 0 auto;
     }
 }
