--- a/lesson4/css/large.css
+++ b/lesson4/css/large.css
@@ -1,3 +1,9 @@
 @media only screen and (min-width: 60em) {
-
+    body {
+        font-size: 1.1em;
+    }
+    .logo{
+        width: 150px;
+        height: auto;
+    }    
 }
