--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -4,21 +4,31 @@
     }
     header {
         border-radius: 1em 1em 0 0;
-        max-width: 700px;
+        max-width: 900px;
         margin: 1em auto 0;
     }
     .contact{
+        display: flex;
         border-radius: 1em 1em 0 0;
     }
     .footer{
         border-radius: 0 0 1em 1em;
     }
     footer {
-        max-width: 700px;
+        max-width: 900px;
         margin: 0 auto;
     }
+    .map {
+        /* fix diss */
+        width: 200px;
+        height: 100px;
+        border-radius: 1em 0 0 0;
+    }
+    .info {
+        text-align: left;
+    }
     nav {
-        max-width: 700px;
+        max-width: 900px;
         margin: 0 auto;
         border-radius: 0 0 1em 1em;
     }
@@ -27,7 +37,7 @@
         grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     }
     main {
-        max-width: 700px;
+        max-width: 900px;
         margin: 0 auto;
     }
     .navigation li:nth-child(2) a:hover {
@@ -36,7 +46,26 @@
     .navigation li:last-child a:hover {
         border-radius: 0 0 1em 0;
     }
-
+    /* from overlay example codepen */
+    .weatherTable {
+        table-layout: auto;
+    }
+    .heroWeather {
+        margin: 0 auto;position: relative;
+    }
+    .weatherSum {
+        position: absolute;
+        top: 10px;
+        left: 25px;
+        background: radial-gradient(#eee, #B9CB90);
+        border: 1px solid #000;
+        padding: 10px 1.5rem;
+        box-shadow: 0 0 30px #111;
+        opacity: .8;
+    }
+    #pancake {
+        border-radius: 1em;
+    }
     /* from ham codepen */
     .navigation {
 		display: flex;
@@ -50,5 +79,5 @@
 	}
 	.navigation li:first-child {
 		display: none;
-	}
+    }
 }
