--- a/lesson7/css/large.css
+++ b/lesson7/css/large.css
@@ -9,4 +9,16 @@
     header, footer, nav, main, #pancake{
         max-width: 900px;
     }
+    main {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: auto;
+    }
+    main h2{
+        grid-row: 1/2;
+        grid-column: 1/4;
+    }
+    figure:hover {
+        box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.3);
+      }
 }
