--- a/lesson7/css/medium.css
+++ b/lesson7/css/medium.css
@@ -21,7 +21,15 @@
         grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     }
     main {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+        grid-gap: 10px;
         margin: 0 auto;
+    }
+    main h2{
+        grid-row: 1/2;
+        grid-column: 1/3;
     }
     .navigation li:nth-child(2) a:hover {
         border-radius: 0 0 0 1em;
@@ -32,6 +40,7 @@
     #pancake {
         border-radius: 1em;
     }
+    
     /* from ham codepen */
     .navigation {
 		display: flex;
