--- a/lesson9/css/prophets.css
+++ b/lesson9/css/prophets.css
@@ -21,7 +21,7 @@ h1, h2 {
     grid-template-columns: 1fr;
     align-items: center;
 }
- section {
+section {
     margin: 1rem;
     background-color: #b9b9cc;
     border: 2px solid #4e4e97;
@@ -45,5 +45,9 @@ footer {
 @media only screen and (min-width: 64rem) {
     .cards {
         grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+    section {
+        width:250px;
+        height: auto;
     }
 }
