--- a/lesson11/css/large.css
+++ b/lesson11/css/large.css
@@ -1,16 +1,41 @@
-@media only screen and (min-width: 60em) {
+@media only screen and (min-width: 64rem) {
+    /*----------- BODY --------------*/
     body {
         font-size: 1.1em;
     }
+    header, nav, main, footer, #pancake {
+        max-width: 64rem;
+    }
+    /*----------- HEADER --------------*/
     .logo{
         width: 150px;
         height: auto;
     }
-    .map {
-        width: 300px;
-        height: 150px;
+    /*----------- NAVIGATION --------------*/
+    /*----------- MAIN --------------*/
+    /*----------- FOOTER --------------*/
+    /*----- index specific css -----*/
+    /*----- preston specific css -----*/
+    /*----- sodaSprings specific css -----*/
+    /*----- fishHaven specific css -----*/
+    /*----- stormCenter specific css -----*/
+    form label.sbs {
+        padding: .4rem 0;
     }
-    header, footer, nav, main {
-        max-width: 900px;
+    form fieldset {
+        max-width: 800px;
     }
-}
+    /*----- gallery specific css -----*/
+    .gallery {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: auto;
+    }
+    .gallery h2{
+        grid-row: 1/2;
+        grid-column: 1/4;
+    }
+    .gallery figure:hover {
+        box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.3);
+      }
+} /* end of media query */
