--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -1,12 +1,22 @@
+/*----------- BODY --------------*/
 body {
-    font-size: smaller;
+    font-size: 16px;
+    font-family: Verdana, sans-serif;
 }
+
+h1 {
+    color:white;
+    font-family: 'Open Sans Condensed', sans-serif;
+    margin-bottom: 0;
+}
+/*----------- HEADER --------------*/
 header {
     display: flex;
     background-color:#26547C;
     font-family: 'Roboto', sans-serif;
     text-align: center;
 }
+
 .logo {
     max-width: 100%;
     width: 100px;
@@ -15,12 +25,132 @@ header {
     margin: 0;
     
 }
+
 header div {
     margin: auto;
 }
+
 header p {
     margin-top: 0;
 }
+
+/*----------- NAVIGATION --------------*/
+nav {
+	margin: 0 auto;
+    background-color: #809848;
+}
+
+.navigation {
+	list-style: none;
+	padding: 0;
+}
+
+.navigation li:first-child {
+	display: block;
+}
+
+.navigation li {
+	display: none;
+}
+
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+nav ul li.active a {
+    background-color: rgba(0, 0, 0, 0.25);
+    color: white;
+}
+
+.navigation a {
+	display: block;
+	padding: 0.75rem;
+	text-decoration: none;
+	color: black;
+	font-weight: 700;
+}
+
+.navigation a:hover {
+	color: white;
+    background: #26547C;
+}
+
+.responsive li {
+	display: block;
+}
+/*----------- MAIN --------------*/
+main {
+    display:block;
+    min-height: 20rem;
+    font-family: 'Roboto', sans-serif;
+}
+
+main figure{
+    width:100%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+main figure img{
+    width:100%;
+}
+
+main h2{
+    text-align: center;
+}
+
+#pancake {
+    max-width: 900px;
+    margin: 1em auto;
+    display: none;
+    text-align: center;
+    background-color: #B9CB90;
+}
+
+#pancake p {
+    margin: 0;
+    padding: 2px;
+    font-weight: bold;
+}
+
+.cards {
+    display: grid;
+}
+
+.townsect {
+    display: grid;
+    justify-content: center;
+    text-align: center;
+    border: 1px solid black;
+    padding: 8px;
+    margin: 8px 0 0 0;
+    background-color: #3574AC;
+}
+
+.towninfo h2 {
+    font-size: 25px;
+    text-decoration: underline;
+    margin-bottom: 0;
+}
+
+.towninfo :nth-child(2) {
+    margin-top: 0;
+    font-style: italic;
+    font-size: 12px;
+}
+
+.townimg {
+    margin: auto;
+    width: 60%;
+    border: 1px solid black;
+}
+.townsect:nth-child(even) {
+    background-color: #B9CB90;
+}
+/*----------- FOOTER --------------*/
 footer {
     display: grid;
     text-align: center;
@@ -28,26 +158,11 @@ footer {
 }
 .contact{
     background-color: #B9CB90;
+    margin-top: 8px;
 }
 .footer{
     background-color: #809848;
     margin-bottom: 1em;
-}
-h1 {
-    color:white;
-    font-family: 'Open Sans Condensed', sans-serif;
-    margin-bottom: 0;
-}
-main {
-    display:grid;
-    padding: 2em;
-    font-family: 'Roboto', sans-serif;
-}
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
 }
 .map {
     max-width: 100%;
@@ -61,89 +176,71 @@ nav ul {
     text-align: center;
     list-style: none;
 }
-.hero {
-    margin: auto;
-    max-width: 100%;
-}
-.weatherSum {
- background-color:#B9CB90;
- border: 1px solid #000;
-}
-.weatherSum h3 {
-    text-align: center;
-    margin: 0 0 8px 0;
-}
-.weatherTable {
-    table-layout: fixed;
-    width: 100%;
-}
-.righty{
-    font-weight: bold;
-    text-align: right;
-}
-#pancake {
-    max-width: 900px;
-    margin: 1em auto;
-    display: none;
-    text-align: center;
-    background-color: #B9CB90;
-}
-#pancake p {
-    margin: 0px;
-    padding: 2px;
-    font-weight: bold;
-}
-.fiveDay {
-    width: 100%;
-    text-align: center;
-}
-.fiveTable {
-    width: 100%;
-    margin: auto;
-}
-.fiveTable th {
+.footerNone {
     background-color: #809848;
+    margin: 1em 0;
 }
-.fiveTable td {
-    background-color: #B9CB90;
+/*----- Clearfix: Force an Element not to collapse -----*/
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
 }
-.fiveTable, .fiveTable th, .fiveTable td{
-    text-align: center;
-    border: 1px solid black;
-    border-collapse: collapse;
-    padding: 5px;
+/*----- index specific css -----*/
+/*----- preston specific css -----*/
+/*----- sodaSprings specific css -----*/
+/*----- fishHaven specific css -----*/
+/*----- stormCenter specific css -----*/
+form fieldset {
+    margin: 0 auto;
+    border: 1px solid #445ba9;
+    border-radius: 10px;
+    padding: .5rem 2%;
+    width: 90%;
+    max-width: 500px;
 }
-/* from ham codepen */
-nav {
-	margin: 0 auto;
-	max-width: 760px;
-    background-color: #809848;
+form legend {
+    color: #445ba9;
+    margin: 0 1rem;
+    padding: 0 .5rem;
 }
-.navigation {
-	list-style: none;
-	padding: 0;
+form label.top, form div {
+    display: block;
+    padding-top: 1rem;
+    color: #9c2c13;
+    font-size: .8rem;
 }
-.navigation li:first-child {
-	display: block;
+form label.top input, form label.top select {
+    -webkit-appearance: none;
+    display: block;
+    font-size: 1rem;
+    border: solid 1px #999;
+    border-radius: 4px;
+    padding: .75rem;
+    color: #555;
+    width: 100%;
+    max-width: 20rem;
+    background-color: rgba(0, 0, 0, 0.1);
 }
-.navigation li {
-	display: none;
+form label.sbs {
+    display: block;
+    padding: .75rem 0;
+    color: #555;
 }
-nav ul li.active a {
-    background-color: rgba(0, 0, 0, 0.25);
+form input.submitBtn {
+    border: none;
+    background-color: #26547C;
     color: white;
+    border-radius: 1rem;
+    padding: .75rem 1.5rem;
+    margin: 0 0 2rem 2%;
+    width: 96%;
+    max-width: 20rem;
 }
-.navigation a {
-	display: block;
-	padding: 0.75rem;
-	text-decoration: none;
-	color: black;
-	font-weight: 700;
+form label.top input:required {
+    border-left: red solid 6px;
 }
-.navigation a:hover {
-	color: white;
-    background: #26547C;
+form label.top input:required:valid {
+    border-left: green solid 6px;
 }
-.responsive li {
-	display: block;
-}
+/*----- gallery specific css -----*/
