--- a/lesson11/css/large.css
+++ b/lesson11/css/large.css
@@ -15,6 +15,22 @@
     /*----------- MAIN --------------*/
     /*----------- FOOTER --------------*/
     /*----- index specific css -----*/
+    .cards {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .townsect {
+        display: grid;
+        width: 90%;
+        justify-content: center;
+        text-align: center;
+        margin: auto;
+        margin-top: 1em;
+    }
+    .townimg {
+        width: 100%;
+        margin: 0 auto;
+    }
     /*----- preston specific css -----*/
     /*----- sodaSprings specific css -----*/
     /*----- fishHaven specific css -----*/
