--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -187,7 +187,80 @@ footer {
     clear: both;
 }
 /*----- index specific css -----*/
+.cards {
+    display: grid;
+}
+.townsect {
+    display: grid;
+    justify-content: center;
+    text-align: center;
+    border: 1px solid black;
+    padding: 8px;
+    margin: 8px 0 0 0;
+    background-color: #3574AC;
+}
+.towninfo h2 {
+    font-size: 25px;
+    text-decoration: underline;
+    margin-bottom: 0;
+}
+.towninfo :nth-child(2) {
+    margin-top: 0;
+    font-style: italic;
+    font-size: 12px;
+}
+.townimg {
+    margin: auto;
+    width: 60%;
+    border: 1px solid black;
+}
+.townsect:nth-child(even) {
+    background-color: #B9CB90;
+}
 /*----- preston specific css -----*/
+.hero {
+    margin: auto;
+    max-width: 100%;
+}
+.weatherSum {
+ background-color:#B9CB90;
+ border: 1px solid #000;
+}
+.weatherSum h3 {
+    text-align: center;
+    margin: 0 0 8px 0;
+}
+.weatherTable {
+    table-layout: fixed;
+    width: 100%;
+}
+.righty{
+    font-weight: bold;
+    text-align: right;
+}
+.fiveDay {
+    width: 100%;
+    text-align: center;
+}
+.fiveTable {
+    width: 100%;
+    margin: auto;
+}
+.fiveTable th {
+    background-color: #809848;
+}
+.fiveTable td {
+    background-color: #B9CB90;
+}
+.fiveTable, .fiveTable th, .fiveTable td{
+    text-align: center;
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 5px;
+}
+.makeEmGrid {
+    display: grid;
+}
 /*----- sodaSprings specific css -----*/
 /*----- fishHaven specific css -----*/
 /*----- stormCenter specific css -----*/
