--- a/lesson11/css/large.css
+++ b/lesson11/css/large.css
@@ -3,7 +3,7 @@
     body {
         font-size: 1.1em;
     }
-    header, nav, main, footer, #pancake {
+    header, nav, main, footer, #pancake, .article {
         max-width: 64rem;
     }
     /*----------- HEADER --------------*/
