--- a/lesson11/css/medium.css
+++ b/lesson11/css/medium.css
@@ -4,9 +4,9 @@
         font-size: 1em;
     }
     /*----------- HEADER --------------*/
-    header, nav, main, footer, #pancake {
+    header, nav, main, footer, #pancake, .article {
         width: 90%;
-        max-width: 35rem;
+        max-width: 63rem;
         margin:auto;
     }
     header {
@@ -138,6 +138,14 @@
         padding: 10px 1.5rem;
         box-shadow: 0 0 30px #111;
         opacity: .8;
+    }
+    .article {
+        display: inline;
+        margin-bottom: 1em;
+        border-radius: 1em;
+    }
+    .articleImg {
+        float: right;
     }
     /*----- sodaSprings specific css -----*/
     /*----- fishHaven specific css -----*/
