--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -180,6 +180,7 @@ footer {
 .footerNone {
     background-color: #809848;
     margin: 1em 0;
+    padding: 1em;
 }
 /*----- Clearfix: Force an Element not to collapse -----*/
 .clearfix:after {
@@ -323,7 +324,7 @@ form input.submitBtn {
     color: white;
     border-radius: 1rem;
     padding: .75rem 1.5rem;
-    margin: 0 0 2rem 2%;
+    margin: 1rem 0 2rem 2%;
     width: 96%;
     max-width: 20rem;
 }
