--- a/scootsProject/css/large.css
+++ b/scootsProject/css/large.css
@@ -22,4 +22,13 @@
     /*----- Reservations specific css -----*/
     /*----- Tour specific css -----*/
     /*----- Contact specific css -----*/
+    /*----- Pupper specific css -----*/
+    #pupper {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: auto;
+    }
+    #pupper h2{
+        grid-row: 1/2;
+        grid-column: 1/4;
+    }
 } /* end of media query */
