--- a/scootsProject/css/medium.css
+++ b/scootsProject/css/medium.css
@@ -45,4 +45,16 @@
     /*----- Reservations specific css -----*/
     /*----- Tour specific css -----*/
     /*----- Contact specific css -----*/
+    /*----- Pupper specific css -----*/
+    #pupper {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+        grid-gap: 10px;
+        margin: 0 auto;
+    }
+    #pupper h2{
+        grid-row: 1/2;
+        grid-column: 1/3;
+    }
 } /* end of media query */
