--- a/scootsProject/css/large.css
+++ b/scootsProject/css/large.css
@@ -11,7 +11,7 @@
         top: 4px;
         left: 0;
     }
-    button {
+    .contact {
         margin-left: 12px;
     }
     /*----------- NAVIGATION --------------*/
