--- a/scootsProject/css/medium.css
+++ b/scootsProject/css/medium.css
@@ -35,6 +35,9 @@
 	.navBar li:first-child {
 		display: none;
     }
+    .active {
+        width:100%;
+    }
     /*----------- MAIN --------------*/
     /*----------- FOOTER --------------*/
     .feetBarNav ul li a {
