--- a/scootsProject/css/medium.css
+++ b/scootsProject/css/medium.css
@@ -45,6 +45,28 @@
     }
     /*----- Home specific css -----*/
     /*----- Rental specific css -----*/
+    #rental {
+        display: grid;
+        grid-template-columns: 350px 1fr;
+    }
+    .wrap {
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
+        white-space: nowrap;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .rentalTable {
+        margin: 25px 0;
+    }
+    .rentalTable tr{
+        height: 30px;
+    }
+    .rentalInfo {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+    }
+
     /*----- Reservations specific css -----*/
     form input.submitBtn {
         max-width: 700px;
