--- a/scootsProject/css/medium.css
+++ b/scootsProject/css/medium.css
@@ -44,6 +44,32 @@
         font-size: 24px;
     }
     /*----- Home specific css -----*/
+    .heroWeather {
+        max-width: 400px;
+    }
+    .weatherTable {
+        table-layout: auto;
+    }
+    .heroWeather {
+        margin: 0 auto;position: relative;
+    }
+    .weatherSum {
+        position: absolute;
+        top: 10px;
+        left: 25px;
+        background: radial-gradient(#eee, var(--secondary-color));
+        border: 1px solid #000;
+        padding: 10px 1.5rem;
+        box-shadow: 0 0 30px #111;
+        opacity: .8;
+    }
+    .weather {
+        display: grid;
+        grid-template-columns: 400px 1fr;
+    }
+    .threeTables {
+        margin-top: 0;
+    }
     /*----- Rental specific css -----*/
     #rental {
         display: grid;
