--- a/scootsProject/css/medium.css
+++ b/scootsProject/css/medium.css
@@ -66,6 +66,7 @@
     .weather {
         display: grid;
         grid-template-columns: 400px 1fr;
+        grid-gap: 10px;
     }
     .threeTables {
         margin-top: 0;
