--- a/scootsProject/css/medium.css
+++ b/scootsProject/css/medium.css
@@ -57,7 +57,7 @@
         position: absolute;
         top: 10px;
         left: 25px;
-        background: radial-gradient(#eee, var(--secondary-color));
+        background: radial-gradient(#eee, #706A6A);
         border: 1px solid #000;
         padding: 10px 1.5rem;
         box-shadow: 0 0 30px #111;
@@ -100,6 +100,9 @@
         width: 40%;
         margin-left: 30%;
         margin-right: 30%
+    }
+    .top {
+        width: 225px;
     }
     /*----- Tour specific css -----*/
     .tourCards {
