--- a/scootsProject/css/small.css
+++ b/scootsProject/css/small.css
@@ -185,6 +185,9 @@ main {
 .callOfAction {
     display: grid;
     text-align: center;
+    max-width: 100%;
+    padding: 0;
+    margin: 0;
 }
 .homeReservationButton {
     color: black;
@@ -194,7 +197,7 @@ main {
     border-radius: 25px;
     cursor: pointer;
     transition: var(--transitionTiming);
-    margin-bottom: 10px;
+    margin: 0 5% 10px 5%;
     font-size: 20px;
     font-weight: bold;
 }
