--- a/scootsProject/css/small.css
+++ b/scootsProject/css/small.css
@@ -473,7 +473,7 @@ form label.top input:required:valid {
 }
 /*----- Pupper specific css -----*/
 #pupper {
-    margin: 0;
+    margin: 0 0 10px 0;
     padding: 0;
     text-align: center;
 }
