--- a/scootsProject/css/medium.css
+++ b/scootsProject/css/medium.css
@@ -143,7 +143,7 @@
         grid-template-columns: 1fr 1fr;
         grid-template-rows: auto;
         grid-gap: 10px;
-        margin: 0 auto;
+        margin: 0 auto 20px;
     }
     #pupper h2{
         grid-row: 1/2;
